tests/fixtures/invalid/max_int_none.py
# Cannot call max() with Int, None
x = max(1, None)
